Fixed icons of navbar on mobile, fixed hamburger animation to revert when nav is no longer visible, added auto scroll to cookies when viewing privacy policy of use of cookies

--- a/frontend/src/app/scss/styles.scss
+++ b/frontend/src/app/scss/styles.scss
@@ -14,6 +14,7 @@ body {
   color: var(--font-color);
   overflow-x: hidden;
   max-width: 100%;
+  scroll-behavior: smooth;
 }
 body {
   min-height: 100%;
